source/blender/editors/space_image/space_image.c
@@ -100,15 +100,19 @@ static void image_scopes_tag_refresh(ScrArea *sa)
 
 static void image_user_refresh_scene(const bContext *C, SpaceImage *sima)
 {
+	/* Update scene image user for acquiring render results. */
+	sima->iuser.scene = CTX_data_scene(C);
+
 	if (sima->image && sima->image->type == IMA_TYPE_R_RESULT) {
-		/* for render result, try to use the currently rendering scene */
+		/* While rendering, prefer scene that is being rendered. */
 		Scene *render_scene = ED_render_job_get_current_scene(C);
 		if (render_scene) {
 			sima->iuser.scene = render_scene;
-			return;
 		}
 	}
-	sima->iuser.scene = CTX_data_scene(C);
+
+	/* Auto switch image to show in UV editor when selection changes. */
+	ED_space_image_auto_set(C, sima);
 }
 
 /* ******************** manage regions ********************* */
